Solve issue with grid, add container around canvas Remove flexwrapping and position as column instead Complete functioning default 10x10 grid!

--- a/styles.css
+++ b/styles.css
@@ -30,17 +30,19 @@ h1{
     font-size: 3em;
 }
 
+#container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #canvas{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    /* background-color: rgb(240, 248, 255); */
+    flex-direction: column;
     border: 20px rgb(100, 100, 100) solid;
     border-radius: 20px;
     height: 700px;
     width: 700px;
-    max-width: 700px;
-    /* give a max-width instead of width */
 }
 
 .rows{
